button small fix

--- a/src/global.scss
+++ b/src/global.scss
@@ -105,3 +105,16 @@ background-color: #333;
         }
     }
 }
+
+button{
+    outline: none;
+    border: none;
+    padding: 10px 16px;
+    &.primary{
+        background-color: #333;
+        color: #fff;
+    }
+    &.secondary{
+        
+    }
+}
